deploymentconfig/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-discovery: enabled 
    istio-injection: disabled
  name: httpd-dc
