deploymentconfig/gateway-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      istio: gateway-v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        sidecar.istio.io/componentLogLevel: router:debug,http:debug,http2:debug
      creationTimestamp: null
      labels:
        istio: gateway-v1
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: auto
          imagePullPolicy: Always
          name: istio-proxy
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: service-ca
              mountPath: /etc/istio/service-ca
              readOnly: true
      volumes:
        - name: service-ca
          configMap:
            name: openshift-service-ca.crt
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
