deploymentconfig/httpd-service.yml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
      appProtocol: https
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
      appProtocol: http
  selector:
    app: httpd
  sessionAffinity: None
  type: ClusterIP
